force-app/main/default/objects/Verification_Code__c/Verification_Code__c.object-meta.xml
<CustomObject>
    <description
  >Hashed, expiring email one-time passcodes for customer-chat identity verification. Written and read only by the ai-api integration user via the /agentforce/otp apexrest endpoints. Never stores the plaintext code.</description>
    <label>Verification Code</label>
    <nameField>
        <displayFormat>VC-{0000000000}</displayFormat>
        <label>Verification Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>