force-app/main/default/objects/Verification_Code__c/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Number of verify attempts made against this code. Capped to lock out brute-force guessing.</description>
    <label>Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>