force-app/main/default/objects/Verification_Code__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <description
  >Hex SHA-256 of (code + per-record salt + config pepper). The plaintext code is never stored.</description>
    <label>Code Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>