force-app/main/default/objects/Verification_Code__c/fields/Code_Salt__c.field-meta.xml
<CustomField>
    <fullName>Code_Salt__c</fullName>
    <description
  >Per-record random hex salt mixed into the code hash so identical codes never share a hash.</description>
    <label>Code Salt</label>
    <length>64</length>
    <type>Text</type>
</CustomField>