force-app/main/default/objects/Verification_Code__c/fields/Consumed__c.field-meta.xml
<CustomField>
    <fullName>Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True once the code has been successfully verified (single-use) so it can never be replayed.</description>
    <label>Consumed</label>
    <type>Checkbox</type>
</CustomField>