force-app/main/default/objects/Verification_Code__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description
  >Optional caller-supplied correlation id for tracing an OTP request/verify pair across ai-api logs.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>