force-app/main/default/objects/Verification_Code__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description
  >Normalized (lower-cased, trimmed) email address the code was issued to. Used to look up pending codes at verify time.</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>