force-app/main/default/objects/Verification_Code__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description
  >UTC instant after which the code is no longer valid.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>