force-app/main/default/objects/Verification_Code__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description
  >Purpose scope for the code, e.g. chat_intake. Verify only matches codes issued for the same purpose.</description>
    <label>Purpose</label>
    <length>40</length>
    <type>Text</type>
</CustomField>